--- a/attack/start_paraphrasing_model_vllm.yaml
+++ b/attack/start_paraphrasing_model_vllm.yaml
@@ -1,5 +1,5 @@
-model_name_or_path: model/Temparaphraser
-template: llama3_rewrite
+model_name_or_path: model/TempParaphraser
+template: llama3
 repetition_penalty: 1.05
 infer_backend: vllm
 vllm_gpu_util: 0.3
